--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 display: none;
             }
             #coverDiv{
-               display:none;
+               background-image: url("image/background.jpg")
             }
             #myPic{
-                width: 100%;
+                border-radius: 50px;
             }
             #content{
                 background-color: rgba(240, 240, 240, 0.863);
