--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
                 display: none;
             }
             #coverDiv{
-               background-image: url("image/background.jpg")
+                background-image: url("image/background.jpg");
             }
             #myPic{
-                border-radius: 50px;
+                border-radius: 100px;
+                position:relative;
+                bottom: 12em;
+                margin-left: auto;
+                margin-right: auto;
+                display: block;
             }
             #content{
                 background-color: rgba(240, 240, 240, 0.863);
