--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             #content{
                 background-color: rgba(240, 240, 240, 0.863);
                 border-radius: 15px;
+                margin-right: 10%;
+                margin-left: 10%;
             }
         }
         @media only screen and (min-width:481px) and(max-width:991px){
