changes in CSS for mobile

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             }
             #coverDiv{
                 background-image: url("image/background.jpg");
+                background-color: red;
             }
             #myPic{
                 border-radius: 100px;
