changes in CSS for mobile

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             #coverDiv{
                 background-image: url("image/background.jpg");
                 background-color: red;
+                height:50px;
             }
             #myPic{
                 border-radius: 100px;
