changes in CSS for mobile

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             }
             #coverDiv{
                 background-image: url("image/background.jpg");
-                background-color: red;
+                height:10em;
+                background-size: cover;
                 height:50px;
             }
             #myPic{
