--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
             }
             #coverDiv{
                 background-image: url("image/background.jpg");
-                height:10em;
+                height:20em;
                 background-size: cover;
+                filter: blur(5px);
             }
             #myPic{
                 border-radius: 100px;
