--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             }
             #myPic{
                 border-radius: 100px;
+                top: 12em;
                 position:relative;
                 margin-left: auto;
                 margin-right: auto;
