--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             }
             #myPic{
                 border-radius: 100px;
-                top: -14em;
+                top: -9em;
                 position:relative;
                 margin-left: auto;
                 margin-right: auto;
@@ -38,7 +38,7 @@
             #content{
                 background-color: rgba(240, 240, 240, 0.863);
                 border-radius: 15px;
-                top: -12em;
+                /* top: 12em; */
             }
         }
         @media only screen and (min-width:481px) and(max-width:991px){
