changes in CSS for mobile

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 filter: blur(5px);
             }
             #myPic{
-                border-radius: 100px;
+                border-radius: 200px;
                 top: -9em;
                 position:relative;
                 margin-left: auto;
@@ -38,7 +38,7 @@
             #content{
                 background-color: rgba(240, 240, 240, 0.863);
                 border-radius: 15px;
-                /* top: 12em; */
+                top: 12em;
             }
         }
         @media only screen and (min-width:481px) and(max-width:991px){
