--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
             #content{
                 background-color: rgba(240, 240, 240, 0.863);
                 border-radius: 15px;
-                top: -20em;
+                margin-top: 0;
+                padding-top: 0;
+                position: relative;
+                top:-12em;
             }
         }
         @media only screen and (min-width:481px) and(max-width:991px){
