--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
             padding:7px 15px;
         }
         
-        @media only screen and (max-width:480px){
+        @media only screen and (max-width:991px){
              #Software{
+                display: none;
+            }
+            #iconimg{
                 display: none;
             }
             #coverDiv{
@@ -44,33 +47,6 @@
                 top:-8em;
             }
         }
-        @media only screen and (min-width:481px) and(max-width:991px){
-            #Software{
-                display: none;
-            }
-            #content{
-                margin-top: 0;
-                padding-top: 0;
-                position: relative;
-                top:-12em;
-                margin-left: 15%;
-                margin-right: 15%;
-                background-color: rgba(240, 240, 240, 0.863);
-                border-radius: 15px;
-            }
-            #coverDiv{
-                height:20em;
-                background-image: url("image/background.jpg");
-                background-size: cover;
-                filter: blur(5px);
-            }
-            #myPic{
-                border-radius: 100px;
-                position: relative;
-                bottom: 12em;
-                margin-left: 2em;
-            }
-        }
         @media only screen and (min-width:992px){
             #content{
                 margin-top: 0;
@@ -94,13 +70,16 @@
                 bottom: 12em;
                 margin-left: 2em;
             }
+            #ds{
+                display: none;
+            }
         }         
     </style>
     </head>
     <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <span class="navbar-brand"><img src="image/icon.jpg" alt="Dhairya's Photo" id="iconimg"></span>
+            <span class="navbar-brand"><h3 class="text-secondary" id="ds">DS</h3><img src="image/icon.jpg" alt="Dhairya's Photo" id="iconimg"></span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -143,6 +122,14 @@
                     <p class="text-secondary">
                         For this project, I have used PHP for backend and JavaScript <a href="#" id='readmore' class="text-secondary">...<small>(read more)</small></a>
                     </p>
+                </li>
+            </ul>
+            <br>
+            <br>
+            <p class="h3">Education</p>
+            <ul>
+                <li>
+                    <p class="h5">Mohawk College</p>
                 </li>
             </ul>
         </div>
