--- a/index.html
+++ b/index.html
@@ -16,7 +16,26 @@
         .h3{
             padding:7px 15px;
         }
-        
+        .left{
+            float: right;
+        }
+        .education{
+            color:rgb(32, 32, 32);
+        }
+        .education:hover{
+            color: rgb(32, 32, 32);
+        }
+        body{
+            padding:0;
+        }
+        #content{
+            margin-bottom: 0px;
+        }
+        @media only screen and (max-width:481px){
+            small{
+                display: none;
+            }
+        }
         @media only screen and (max-width:991px){
              #Software{
                 display: none;
@@ -129,9 +148,20 @@
             <p class="h3">Education</p>
             <ul>
                 <li>
-                    <p class="h5">Mohawk College</p>
+                    <a href="#" class="education"><p class="h5">Mohawk College <small>,Hamilton, ON. <span class="left">(Jan 2019 - Dec 2022)</span></small></p></a>
                 </li>
             </ul>
+            <br><br>
+            <p class="h3">Experience</p>
+            <ul>
+                <li>
+                    <a href="#" class="education"><p class="h5">Sandwich artist<small>, Subway, Hamilton, ON. <span class="left">(Mar 2019 - Present)</span></small></p></a>
+                </li>
+                <li>
+                    <a  href="#" class="education"><p class="h5">Web Developer<small> ,ACT Computer, Ahmedabed, ON. <span class="left">(Apr 2017 - Sep 2018)</span></small></p></a>
+                </li>
+            </ul>
+            <br><br>
         </div>
     </body>
 </html>
