Solved some mistakes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             margin-bottom: 0px;
         }
         @media only screen and (max-width:481px){
-            small{
+            .small{
                 display: none;
             }
         }
@@ -148,17 +148,17 @@
             <p class="h3">Education</p>
             <ul>
                 <li>
-                    <a href="#" class="education"><p class="h5">Mohawk College <small>,Hamilton, ON. <span class="left">(Jan 2019 - Dec 2022)</span></small></p></a>
+                    <a href="#" class="education"><p class="h5">Mohawk College <small class="small">,Hamilton, ON. <span class="left">(Jan 2019 - Dec 2022)</span></small></p></a>
                 </li>
             </ul>
             <br><br>
             <p class="h3">Experience</p>
             <ul>
                 <li>
-                    <a href="#" class="education"><p class="h5">Sandwich artist<small>, Subway, Hamilton, ON. <span class="left">(Mar 2019 - Present)</span></small></p></a>
+                    <a href="#" class="education"><p class="h5">Sandwich artist<small class="small">, Subway, Hamilton, ON. <span class="left">(Mar 2019 - Present)</span></small></p></a>
                 </li>
                 <li>
-                    <a  href="#" class="education"><p class="h5">Web Developer<small> ,ACT Computer, Ahmedabed, ON. <span class="left">(Apr 2017 - Sep 2018)</span></small></p></a>
+                    <a  href="#" class="education"><p class="h5">Web Developer<small class="small"> ,ACT Computer, Ahmedabed, ON. <span class="left">(Apr 2017 - Sep 2018)</span></small></p></a>
                 </li>
             </ul>
             <br><br>
