Solved some mistakes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             margin-bottom: 0px;
         }
         @media only screen and (max-width:481px){
-            .small{
+            .education> small{
                 display: none;
             }
         }
