--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             }
         }
         @media only screen and (max-width:991px){
-             #Software{
+            #Software{
                 display: none;
             }
             #iconimg{
@@ -106,16 +106,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Projects</a>
+                  <a class="nav-link" href="Projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Education</a>
+                    <a class="nav-link" href="Education.html">Education</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Experience</a>
+                    <a class="nav-link" href="Experience.html">Experience</a>
                 </li>
               </ul>
             </div>
