--- a/Experience.html
+++ b/Experience.html
@@ -20,16 +20,27 @@
               position: relative;
               /* text-shadow: 5px 5px rgb(104, 103, 103); */
             }
-            @media only screen and (min-width: 992px){
-                .h1{
-                    font-size: 10em;
+            #content{
+              margin-top: 4em;
+              padding: 2em 2em;
+            }
+            @media only screen and (max-width: 481px){
+              .h1{
+                    font-size: 3em;
+                    top: -4em;
+                    text-align: center;
+                }
+                
+            }
+            @media only screen and (min-width: 482px) and (max-width: 991px){
+              .h1{
+                    font-size: 8em;
                     top: -1.75em;
                     text-align: center;
                 }
-                #content{
-                  margin-top: 4em;
-                  padding: 2em 2em;
-                }
+            }
+            @media only screen and (min-width: 992px){
+                
                 .small{
                   float:right;
                 }
