--- a/Experience.html
+++ b/Experience.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="CSS/css.css">
         <style>
             #coverDiv{
-              background-image: url("image/Exp_back1.png");
+              background-image: url("image/Exp_back1.PNG");
               filter: blur(10px);
             }
             .h1{
