--- a/Experience.html
+++ b/Experience.html
@@ -40,7 +40,11 @@
                 }
             }
             @media only screen and (min-width: 992px){
-                
+              .h1{
+                    font-size: 10em;
+                    top: -1.75em;
+                    text-align: center;
+                }
                 .small{
                   float:right;
                 }
