--- a/Education.html
+++ b/Education.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="CSS/css.css">
         <style>
             #coverDiv{
-              background-image: url("image/Edu_back.jpg");
+              background-image: url("image/Edu_back.JPG");
             }
             .h1{
               position: relative;
