--- a/Experience.html
+++ b/Experience.html
@@ -30,7 +30,10 @@
                     top: -4em;
                     text-align: center;
                 }
-                
+                #coverDiv{
+                  background-image: url("image/Exp_back2.PNG");
+                  filter: blur(10px);
+                } 
             }
             @media only screen and (min-width: 482px) and (max-width: 991px){
               .h1{
