--- a/Experience.html
+++ b/Experience.html
@@ -29,6 +29,7 @@
                     font-size: 3em;
                     top: -4em;
                     text-align: center;
+                    color: white;
                 }
                 #coverDiv{
                   background-image: url("image/Exp_back2.PNG");
