--- a/Experience.html
+++ b/Experience.html
@@ -30,6 +30,7 @@
                     top: -4em;
                     text-align: center;
                     color: rgb(219, 219, 219);
+                    text-shadow: 5px 5px black;
                 }
                 #coverDiv{
                   background-image: url("image/Exp_back2.PNG");
