--- a/Experience.html
+++ b/Experience.html
@@ -12,40 +12,19 @@
         <link rel="stylesheet" href="CSS/css.css">
         <style>
             #coverDiv{
-              background-image: url("image/Edu_back.jpg");
+              background-image: url("image/Exp_back1.png");
+              filter: blur(10px);
             }
             .h1{
+              color: rgb(51, 51, 51);
               position: relative;
-              /* text-shadow: 5px 5px rgb(0, 51, 218);   */
-              font-style: italic;
-              color:rgb(4, 46, 95);
-            }
-            @media only screen and (max-width: 481px){
-                .h1{
-                  font-size: 3.5em;
-                  top: -3em;
-                  margin-left: 10px;
-                }
-                #content{
-                  margin-top: 4em;
-                  padding-left: 1em;
-                }
-            }
-            @media only screen and (min-width: 482px) and (max-width: 991px){
-                .h1{
-                    font-size: 7em;
-                    top: -1.75em;
-                    margin-left: 0.25em;
-                }
-                #content{
-                  padding:2em 2em;
-                }
+              /* text-shadow: 5px 5px rgb(104, 103, 103); */
             }
             @media only screen and (min-width: 992px){
                 .h1{
                     font-size: 10em;
                     top: -1.75em;
-                    margin-left: 0.1em;
+                    text-align: center;
                 }
                 #content{
                   margin-top: 4em;
@@ -53,6 +32,10 @@
                 }
                 .small{
                   float:right;
+                }
+                .left{
+                  float:right;
+                  font-weight: bold;
                 }
             }
         </style>
@@ -72,29 +55,38 @@
                 <li class="nav-item">
                   <a class="nav-link" href="Projects.html">Projects</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="Education.html">Qualification</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="Experience.html">Experience</a>
                 </li>
               </ul>
             </div>
-            
             <span class="navbar-brand" href="#" id='Software'>Software Developer</span>
           </nav>
-
           <div id="coverDiv"></div>
-          <div id="heading"><p class="h1">Qualification</p></div>
+          <div><p class="h1">Experience</p></div>
           <div id="content">
-            <p class="h4">Software Developer<small class="small">(Jan 2019 - Dec 2022)</small></p>
-            <p class="h5">Mohawk College<small>, Hamilton, ON.</small></p>
             <ul>
-              <li><span class="h6">Programming Languages</span>: Python, Java, C#, JavaScript, PHP</li>
-              <li><span class="h6">Operating System</span>: Linux, Windows 7, 8 and 10</li>
-              <li><span class="h6">Database</span>: MS Access and MySql</li>
-              <li><span class="h6">IDLE</span>: PyCharm, NetBeans, Visual Studio 2019, INTELLIJ IDEA and MY SQL Server</li>
-              <li><span class="h6">Web Programming Languages</span>: HTML5, CSS3, SASS, JavaScript, JQuery, ReactJS and PHP</li>
+              <li>
+                <span class="h5">Web Developer</span> (ACT Computer Class), Ahmedabad, Guj.<span class="left">(Mar 2017 - Sep 2018)</span>
+                <ul>
+                  <li>Worked with senior developer to manage large, complex designed projects for corporate clients</li>
+                  <li>Develop project concepts and maintain optimal workflow</li>
+                  <li>Completed detailed programming and development tasks for front end internal websites as well as challenging back-end server code</li>
+                  <li>Collaborate with designers to create clean interfaces </li>
+                  <li>Carry out quality assurance tests to discover errors and optimize usability.</li>
+                </ul>
+              </li><br>
+              <li>
+                <span class="h5">Sandwich Artist</span> (Subway), Hamilton, ON.<span class=left>(Feb 2019 - Present)</span>
+                <ul>
+                  <li>Supporting other areas of the restaurant as necessary, such as setup, clean up, equipment maintenance</li>
+                  <li>Consistently deliver exceptional customer service</li>
+                  <li>Preparing food in accordance with Subway food safety laws and guidelines </li>
+                </ul>
+              </li>
             </ul>
           </div>
     </body>
