--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               </ul>
             </div>
             
-            <span class="navbar-brand" href="#" id='Software'>Software Developer</span>
+            <span class="navbar-brand" id='Software'>Software Developer</span>
           </nav>
 
           <div id="coverDiv"></div>
