--- a/Education.html
+++ b/Education.html
@@ -89,13 +89,40 @@
           <div id="content">
             <p class="h4">Software Developer<small class="small">(Jan 2019 - Dec 2022)</small></p>
             <p class="h5">Mohawk College<small>, Hamilton, ON.</small></p>
-            <ul>
+            <!-- <ul>
               <li><span class="h6">Programming Languages</span>: Python, Java, C#, JavaScript, PHP</li>
               <li><span class="h6">Operating System</span>: Linux, Windows 7, 8 and 10</li>
               <li><span class="h6">Database</span>: MS Access and MySql</li>
               <li><span class="h6">IDLE</span>: PyCharm, NetBeans, Visual Studio 2019, INTELLIJ IDEA and MY SQL Server</li>
               <li><span class="h6">Web Programming Languages</span>: HTML5, CSS3, SASS, JavaScript, JQuery, ReactJS and PHP</li>
-            </ul>
+            </ul> -->
+            <table>
+              <tr>
+                <ul>
+                  <li><td><span class="h6">Programming Languages</span></td><td> Python, Java, C#, JavaScript, PHP</td></li>
+                </ul>
+              </tr>
+              <tr>
+                <ul>
+                  <li><td><span class="h6">Operating System</span></td><td> Linux, Windows 7, 8 and 10</td></li>
+                </ul>
+              </tr>
+              <tr>
+                <ul>
+                  <li><td><span class="h6">Database</span></td><td> MS Access and MySql</td></li>
+                </ul>
+              </tr>
+              <tr>
+                <ul>
+                  <li><td><span class="h6">Web Programming Languages</span></td><td> HTML5, CSS3, SASS, JavaScript, JQuery and ReactJS</td></li>
+                </ul>
+              </tr>
+              <tr>
+                <ul>
+                  <li><td><span class="h6">Programming Languages</span></td><td> Python, Java, C#, JavaScript, PHP</td></li>
+                </ul>
+              </tr>
+            </table>
           </div>
     </body>
 </html>
