--- a/Education.html
+++ b/Education.html
@@ -99,7 +99,7 @@
             <table>
               <tr>
                 <ul>
-                  <li><td><span class="h6">Programming Languages</span></td><td> Python, Java, C#, JavaScript, PHP</td></li>
+                  <td><li><span class="h6">Programming Languages</span> Python, Java, C#, JavaScript, PHP</li></td>
                 </ul>
               </tr>
               <tr>
