--- a/Education.html
+++ b/Education.html
@@ -98,20 +98,20 @@
             </ul> -->
             <table>
               <tr>
-                  <td><span class="h6">Programming Languages</span> Python, Java, C#, JavaScript, PHP</td>
+                  <td>&emsp;<span class="h6">Programming Languages</span></td><td> Python, Java, C#, JavaScript, PHP</td>
               </tr>
               <tr>
-                  <td><span class="h6">Operating System</span></td><td> Linux, Windows 7, 8 and 10</td>
+                  <td>&emsp;<span class="h6">Operating System</span></td><td> Linux, Windows 7, 8 and 10</td>
                 </tr>
               <tr>
-                  <td><span class="h6">Database</span></td><td> MS Access and MySql</td>
+                  <td>&emsp;<span class="h6">Database</span></td><td> MS Access and MySql</td>
               </tr>
               <tr>
-                  <td><span class="h6">Web Programming Languages</span></td><td> HTML5, CSS3, SASS, JavaScript, JQuery and ReactJS</td>
+                  <td>&emsp;<span class="h6">Web Programming Languages</span></td><td> HTML5, CSS3, SASS, JavaScript, JQuery and ReactJS</td>
                 </ul>
               </tr>
               <tr>
-                  <td><span class="h6">Programming Languages</span></td><td> Python, Java, C#, JavaScript, PHP</td>
+                  <td>&emsp;<span class="h6">Programming Languages</span></td><td> Python, Java, C#, JavaScript, PHP</td>
               </tr>
             </table>
           </div>
