--- a/Education.html
+++ b/Education.html
@@ -54,6 +54,9 @@
                 .small{
                   float:right;
                 }
+                table{
+                  width: 100%;
+                }
             }
         </style>
     </head>
