--- a/Education.html
+++ b/Education.html
@@ -99,22 +99,22 @@
               <li><span class="h6">IDLE</span>: PyCharm, NetBeans, Visual Studio 2019, INTELLIJ IDEA and MY SQL Server</li>
               <li><span class="h6">Web Programming Languages</span>: HTML5, CSS3, SASS, JavaScript, JQuery, ReactJS and PHP</li>
             </ul> -->
-            <table>
+            <table class="table">
               <tr>
-                  <td>&emsp;<span class="h6">Programming Languages</span></td><td style="float: right;"> Python, Java, C#, JavaScript, PHP</td>
+                  <th scope="row">&emsp;Programming Languages</th><td style="float: right;"> Python, Java, C#, JavaScript, PHP</td>
               </tr>
               <tr>
-                  <td>&emsp;<span class="h6">Operating System</span></td><td style="float: right;"> Linux, Windows 7, 8 and 10</td>
+                <th scope="row">&emsp;Operating System</th><td style="float: right;"> Linux, Windows 7, 8 and 10</td>
                 </tr>
               <tr>
-                  <td>&emsp;<span class="h6">Database</span></td><td style="float: right;"> MS Access and MySql</td>
+                <th scope="row">&emsp;Database</th><td style="float: right;"> MS Access and MySql</td>
               </tr>
               <tr>
-                  <td>&emsp;<span class="h6">Web Programming Languages</span></td><td style="float: right;"> HTML5, CSS3, SASS, JavaScript, JQuery and ReactJS</td>
+                <th scope="row">&emsp;Web Programming Languages</th><td style="float: right;"> HTML5, CSS3, SASS, JavaScript, JQuery and ReactJS</td>
                 </ul>
               </tr>
               <tr>
-                  <td>&emsp;<span class="h6">Programming Languages</span></td><td style="float: right;"> Python, Java, C#, JavaScript, PHP</td>
+                <th scope="row">&emsp;Programming Languages</th><td style="float: right;"> Python, Java, C#, JavaScript, PHP</td>
               </tr>
             </table>
           </div>
